# mvsusie-py

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Cli.PY  FLOWCHART_RUN.md  LICENSE  README.md  README1.md  RELEASE_CHECKLIST.md  RUN_GUIDE.md  ci.yml  pyproject.toml
scripts/: parity_smoke.py
src/mvsusie_py/: __init__.py  core.py
src/mvsusie_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_core.py  test_em_mash_cli.py  test_joint_and_mash.py  test_lfsr_calcz.py  test_lfsr_multivariate.py  test_mixture_prior.py  test_multivariate.py  test_rss.py  test_rss_multivariate.py  test_rss_suff_stat.py  test_suff_stat_multivariate.py  test_upstream_parity_multivariate_rss.py  test_upstream_parity_univariate.py
tmp_upstream_tests/: index.json  test_mvsusie_coef.R
