[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvsusie-py"
version = "0.2.0"
description = "Python MVP port of core mvsusieR APIs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "mvsusie-py contributors" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
