[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvsusie-py"
version = "0.3.0"
description = "Pure Python/NumPy implementation of mvsusieR: joint multivariate fine-mapping with mash covariance learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "mvsusie-py contributors" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
mvsusie = "mvsusie_py.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
